tests/fail/registering/assertion formula without provable sort.mmu
(sort s )
(term a () (s ()))
(axiom b ((x s ())) () a)
